# robot

./: Information sur les junctions ntfs (hard links).txt  LICENCE.txt  Readme_for_public_access.txt  STM32_create-junctions.bat  STM32_delete-junctions.bat  TODO_LIST.txt  accelerometre.h  create-junctions.bat  delete-junctions.bat
1_Propulsion/CurrentSoftware/: .cproject  .project  CMakeLists.txt  Global_config.h  Global_flags.h  Global_vars.h  Global_vars_types.h  _Propulsion Debug.launch  _Propulsion_config.h  avoidance.c  avoidance.h  buffer.c  buffer.h  calculator.c  calculator.h  clock.c  clock.h  com_xbee.c  com_xbee.h  copilot.c  copilot.h  corrector.c  corrector.h  cos_sin.c  debug.c  debug.h  detection.c  detection.h  detection_choc.c  detection_choc.h  encoders.c  encoders.h  ff_test_term.c  ff_test_term.h  gyroscope.c  gyroscope.h  hokuyo.c  hokuyo.h  hokuyo_functions.c  hokuyo_vars.h  (+40 more)
1_Propulsion/CurrentSoftware/LCDTouch/: Image.c  Image.h  LCD.c  LCD.h  LCDTouch_Display.c  LCDTouch_Display.h  LCD_Touch_Calibration.c  LCD_Touch_Calibration.h  STMPE811QTR.c  fonts.c  lcd_log.c  lcd_log.h  lcd_log_conf.h  stm32f4_discovery.c  stm32f4_discovery.h  stm32f4_discovery_lcd.c  stm32f4_discovery_lcd.h  write_lcd.c  write_lcd.h  zone.c  zone.h
1_Propulsion/CurrentSoftware/config/: config_debug.h  config_global.h  config_global_flags.h  config_global_vars.c  config_global_vars.h  config_global_vars_types.h  config_pin.h  config_use.h
1_Propulsion/CurrentSoftware/project_2012/: .cproject  .project  Global_config.h  Global_vars.h  Global_vars_types.h  Tests.docx  _Propulsion_config.h  buffer.h  calculator.c  copilot.c  corrector.c  corrector.h  cos_sin.c  cos_sin.h  cpld.c  cpld.h  debug.c  debug.h  encoders.c  it.c  joystick.h  main.c  motors.c  odometry.c  odometry.h  pilot.c  pilot.h  propulsion.mcp  propulsion.mcw  roadmap.c  roadmap.h  secretary.c  secretary.h  sequences.c  sequences.h  supervisor.c  supervisor.h  warner.c  warner.h
1_Propulsion/CurrentSoftware/scan/: borders_scan.c  borders_scan.h  objects_scan.c  objects_scan.h  rotation_scan.c  rotation_scan.h  scan.c  scan.h
1_Propulsion/CurrentSoftware/usb_host/: usb_bsp.c  usbh_conf.h  usbh_usr.c  usbh_usr.h
2_Strategie/CurrentSoftwareSTM32/: .cproject  .project  Asser_functions.c  Asser_functions.h  CMakeLists.txt  CarteS.mcp  CarteS.mcw  Generic_functions.c  Generic_functions.h  Geometry.c  Geometry.h  Global_config.h  Global_vars.h  Makefile  Pathfind.c  Pathfind.h  Stacks.c  Stacks.h  SuperStrat.config  SuperStrat.files  SuperStrat.includes  _Debug Project.launch  _Strategie Debug.launch  act_avoidance.c  act_avoidance.h  act_can.c  act_can.h  act_functions.c  act_functions.h  actions_cake.c  actions_cake.h  actions_gifts.c  actions_gifts.h  actions_glasses.c  actions_glasses.h  actions_tests_krusty.c  actions_tests_krusty.h  actions_tests_krusty_micro.c  actions_tests_tiny.c  actions_tests_tiny_micro.c  (+61 more)
2_Strategie/CurrentSoftwareSTM32/Supervision/: Buffer.c  Buffer.h  Buffer_types.h  Buttons.c  Buttons.h  Buzzer.c  Buzzer.h  Can_injector.c  Can_injector.h  Can_watch.c  Can_watch.h  Eeprom.c  Eeprom.h  Eeprom_can_msg.c  Eeprom_can_msg.h  Global_config.h  Global_flags.h  Global_vars.h  Global_vars_types.h  Interface.c  Interface.h  LCD_CAN_injector.c  LCD_CAN_injector.h  LCD_MIDAS_4x20.c  LCD_MIDAS_4x20.h  LCD_interface.c  LCD_interface.h  RTC.c  RTC.h  Selftest.c  Selftest.h  SelftestActionneur.c  SelftestActionneur.h  Supervision.c  Supervision.h  Supervision_Project.mcp  Supervision_Project.mcs  Supervision_Project.mcw  Synchro_balises.c  Synchro_balises.h  (+4 more)
2_Strategie/CurrentSoftwareSTM32/actuator/: act_avoidance.c  act_avoidance.h  act_can.c  act_can.h  act_functions.c  act_functions.h  queue.c  queue.h
2_Strategie/CurrentSoftwareSTM32/config/: config_debug.h  config_global.h  config_global_flags.h  config_global_vars.c  config_global_vars.h  config_global_vars_types.h  config_pin.h  config_qs.h  config_strat.h  config_use.h
2_Strategie/CurrentSoftwareSTM32/pompes_black_2016/: pompe_left.c  pompe_left.h  pompe_middle.c  pompe_middle.h  pompe_middle_left.c  pompe_middle_left.h  pompe_middle_right.c  pompe_middle_right.h  pompe_right.c  pompe_right.h  pompe_very_left.c  pompe_very_left.h  pompe_very_right.c  pompe_very_right.h
2_Strategie/CurrentSoftwareSTM32/propulsion/: PathFinder2017_essai.c  Pathfind.c  astar.c  astar.h  avoidance.c  avoidance.h  movement.c  movement.h  patfind.h  pathfind.c  pathfind.h  prop_functions.c  prop_functions.h
2_Strategie/CurrentSoftwareSTM32/strats_2013/: actions.h  actions_cake.c  actions_cherries.c  actions_cherries.h  actions_gifts.c  actions_gifts.h  actions_glasses.c  actions_glasses.h  actions_tests_krusty.c  actions_tests_krusty.h  actions_tests_krusty_micro.c  actions_tests_tiny.c  actions_tests_tiny.h  actions_tests_tiny_micro.c  actions_tests_tiny_micro.h  actions_utils.c  actions_utils.h
2_Strategie/CurrentSoftwareSTM32/strats_2014/: actions_Pfruit.c  actions_Pfruit.h  actions_balls.c  actions_both_2014.c  actions_both_2014.h  actions_guy.c  actions_guy.h  actions_net.c  actions_net.h  actions_phases_finales.c  actions_phases_finales.h  actions_pierre.c  actions_pierre.h  strat_pierre.c  strat_pierre.h
2_Strategie/CurrentSoftwareSTM32/strats_2017/: actions_both_2017.c  actions_both_2017.h  actions_both_generic.c  actions_both_generic.h
2_Strategie/CurrentSoftwareSTM32/utils/: actionChecker.c  actionChecker.h  generic_functions.c  generic_functions.h
3_Actionneur/CurrentSoftwareSTM32/: .cproject  .project  ActManager.c  ActManager.h  CMakeLists.txt  Can_msg_processing.c  Can_msg_processing.h  Global_flags.h  Global_vars_types.h  _Debug Project.launch  _Release Project.launch  _Strategie Debug (1).launch  _Strategie Debug.launch  act_queue_utils.c  act_queue_utils.h  clock.c  clock.h  colorSensor.c  colorSensor.h  main.c  main.h  mosfetBoard.c  mosfetBoard.h  queue.c  queue.h  scan.c  scan.h  selftest.c  selftest.h
3_Actionneur/CurrentSoftwareSTM32/BIG/: BActManager.c  (+1 more)
STM32/Lib/: CMakeLists.txt  CMakeToolchain.cmake  readMe.txt
db/: uuid
(+2583 files in other folders)
